--- a/css/styles.css
+++ b/css/styles.css
@@ -210,7 +210,7 @@ body {
   font-family: inherit;
   font-weight: 700;
   font-size: 16px;
-  line-height: 1.88;
+  line-height: 1.87;
   letter-spacing: 0.06em;
   color: var(--another-main-color);
   cursor: pointer;
@@ -594,7 +594,7 @@ body {
   padding-top: 12px;
 }
 
-.footer-links-text {
+.footer-subtitle {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -603,6 +603,8 @@ body {
   color: var(--another-main-color);
   margin-bottom: 20px;
 }
+
+/*-------footer-social-list--------*/
 
 .footer-social-list {
   display: flex;
@@ -641,6 +643,83 @@ body {
   outline: none;
 }
 
+/*-------footer-mailing--------*/
+
+.footer-form {
+  padding-top: 12px;
+  margin-left: 92px;
+}
+
+.footer-mailing-wrap {
+  display: flex;
+}
+
+.footer-mailing-field {
+  display: inline-block;
+  width: 358px;
+  height: 50px;
+  background-color: transparent;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  padding: 15px 16px;
+  font-size: 16px;
+  line-height: 1.25;
+  display: flex;
+  align-items: center;
+  letter-spacing: 0.03em;
+  color: var(--another-main-color);
+  margin-right: 12px;
+  outline: none;
+}
+
+.footer-mailing-field::placeholder {
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.footer-mailing-field:focus:not(:placeholder-shown):valid {
+  border-color: var(--accent-color);
+}
+
+.footer-mailing-field:focus:not(:placeholder-shown):invalid {
+  border-color: red;
+}
+
+.footer-btn-text {
+  display: inline-block;
+  margin-right: 10px;
+}
+
+.footer-mailing-icon {
+  width: 24px;
+  height: 24px;
+}
+
+.footer-mailing-btn {
+  height: 50px;
+  display: flex;
+  padding: 10px 28px;
+  background-color: var(--accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border: none;
+  border-radius: 4px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.06em;
+  color: var(--another-main-color);
+  fill: var(--another-main-color);
+  cursor: pointer;
+}
+
+.mailing-btn:hover,
+.mailing-btn:focus {
+  background-color: #188ce8;
+  outline: none;
+}
+
 /*=================Web-Studio portfolio==============*/
 /*=================Filter buttons================*/
 .filter-btn-list {
@@ -670,13 +749,7 @@ body {
     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
 }
 
-.portfolio-btn.current {
-  color: var(--another-main-color);
-  background-color: var(--accent-color);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
-}
-
+.portfolio-btn.current,
 .portfolio-btn:hover,
 .portfolio-btn:focus {
   color: var(--another-main-color);
