--- a/css/styles.css
+++ b/css/styles.css
@@ -45,7 +45,7 @@ body {
 
 .link {
   text-decoration: none;
-  outline: none;
+  /* outline: none; */
 }
 
 .menu-link.current {
@@ -65,11 +65,14 @@ body {
 }
 
 .visually-hidden {
-  position: absolute;
-  clip: rect(0 0 0 0);
-  width: 1px;
-  height: 1px;
-  margin: -1px;
+  position: absolute !important;
+  clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
+  clip: rect(1px, 1px, 1px, 1px);
+  padding: 0 !important;
+  border: 0 !important;
+  height: 1px !important;
+  width: 1px !important;
+  overflow: hidden;
 }
 
 /*---------HEADER-------*/
@@ -127,7 +130,7 @@ body {
 .menu-link:hover,
 .menu-link:focus {
   color: var(--accent-color);
-  outline: none;
+  /* outline: none; */
 }
 
 .menu-link.current::after {
@@ -225,7 +228,7 @@ body {
 .modal-btn:hover,
 .modal-btn:focus {
   background-color: #188ce8;
-  outline: none;
+  /* outline: none; */
 }
 
 /* -------------Модальное окно------------- */
@@ -587,8 +590,10 @@ body {
 .info-link:hover,
 .info-link:focus {
   color: var(--accent-color);
-  outline: none;
+  /* outline: none; */
 }
+
+/*-------footer-social-list--------*/
 
 .footer-links {
   padding-top: 12px;
@@ -603,8 +608,6 @@ body {
   color: var(--another-main-color);
   margin-bottom: 20px;
 }
-
-/*-------footer-social-list--------*/
 
 .footer-social-list {
   display: flex;
@@ -670,7 +673,7 @@ body {
   letter-spacing: 0.03em;
   color: var(--another-main-color);
   margin-right: 12px;
-  outline: none;
+  /* outline: none; */
 }
 
 .footer-mailing-field::placeholder {
@@ -717,7 +720,7 @@ body {
 .mailing-btn:hover,
 .mailing-btn:focus {
   background-color: #188ce8;
-  outline: none;
+  /* outline: none; */
 }
 
 /*=================Web-Studio portfolio==============*/
@@ -756,7 +759,7 @@ body {
   background-color: var(--accent-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
-  outline: none;
+  /* outline: none; */
 }
 
 /*-------------Work examples-------------*/
@@ -817,7 +820,7 @@ body {
 .work-item:hover {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
-  outline: none;
+  /* outline: none; */
 }
 
 .work-item-text {
