--- a/css/styles.css
+++ b/css/styles.css
@@ -182,7 +182,6 @@ body {
   background: #2f303a;
   padding-top: 200px;
   padding-bottom: 200px;
-  text-align: center;
   max-width: 1600px;
   background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
@@ -202,6 +201,7 @@ body {
   line-height: 1.36;
   letter-spacing: 0.06em;
   text-transform: uppercase;
+  text-align: center;
   color: var(--another-main-color);
   max-width: 696px;
   margin: 0 auto 30px;
@@ -210,7 +210,7 @@ body {
 /* ---------Модальная кнопка открытия окна--------- */
 
 .modal-btn {
-  font-family: inherit;
+  display: block;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
@@ -221,6 +221,7 @@ body {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border: none;
   border-radius: 4px;
+  margin: 0 auto;
   padding: 10px 32px;
   transition: var(--transition-background-color);
 }
@@ -266,6 +267,7 @@ body {
   position: absolute;
   top: 50%;
   left: 50%;
+  padding: 40px;
 
   min-width: 528px;
   min-height: 580px;
@@ -288,10 +290,7 @@ body {
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--main-color);
-
-  position: absolute;
-  top: 40px;
-  left: 40px;
+  margin-bottom: 12px;
 }
 
 .modal-close-btn {
@@ -313,6 +312,68 @@ body {
 .close-icon {
   visibility: inherit;
   pointer-events: inherit;
+}
+
+/* --------------Modal Form---------------------- */
+
+.modal-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.modal-input {
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  box-sizing: border-box;
+  border-radius: 4px;
+  margin-top: 4px;
+  padding-left: 42px;
+  padding-right: 12px;
+}
+
+.modal-form-label {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  color: var(--small-text-color);
+  margin-bottom: 10px;
+}
+
+.modal-input-wrapper {
+  position: relative;
+}
+
+.input-icon-wrap {
+  width: 18px;
+  height: 18px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 50%;
+  left: 12px;
+  transform: translateY(-50%);
+}
+
+.modal-user-coment {
+  width: 100%;
+  resize: none;
+  width: 448px;
+  height: 120px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  padding: 12px 16px;
+}
+
+.modal-user-coment::placeholder {
+  font-size: 12px;
+  line-height: 1.67;
+  letter-spacing: 0.01em;
+}
+
+.modal-form-submit {
+  align-self: center;
 }
 
 /*=====================Features===================*/
