--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@
   --transition-fill: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   --transition-background-color: background-color 250ms
     cubic-bezier(0.4, 0, 0.2, 1);
+  --transition-border: body 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 h1,
@@ -217,7 +218,7 @@ body {
   letter-spacing: 0.06em;
   color: var(--another-main-color);
   cursor: pointer;
-  background: var(--accent-color);
+  background-color: var(--accent-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border: none;
   border-radius: 4px;
@@ -229,7 +230,6 @@ body {
 .modal-btn:hover,
 .modal-btn:focus {
   background-color: #188ce8;
-  /* outline: none; */
 }
 
 /* -------------Модальное окно------------- */
@@ -307,6 +307,7 @@ body {
   justify-content: center;
   fill: #000000;
   cursor: pointer;
+  transition: var(--transition-fill);
 }
 
 .close-icon {
@@ -314,22 +315,16 @@ body {
   pointer-events: inherit;
 }
 
+.modal-close-btn:hover,
+.modal-close-btn:focus {
+  fill: var(--accent-color);
+}
+
 /* --------------Modal Form---------------------- */
 
 .modal-form {
   display: flex;
   flex-direction: column;
-}
-
-.modal-input {
-  width: 100%;
-  height: 40px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  box-sizing: border-box;
-  border-radius: 4px;
-  margin-top: 4px;
-  padding-left: 42px;
-  padding-right: 12px;
 }
 
 .modal-form-label {
@@ -342,6 +337,19 @@ body {
 
 .modal-input-wrapper {
   position: relative;
+  display: block;
+  margin-top: 4px;
+}
+
+.modal-input {
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  box-sizing: border-box;
+  border-radius: 4px;
+  padding-left: 42px;
+  padding-right: 12px;
+  transition: var(--transition-border);
 }
 
 .input-icon-wrap {
@@ -353,23 +361,41 @@ body {
   position: absolute;
   top: 50%;
   left: 12px;
+  fill: var(--main-color);
   transform: translateY(-50%);
+  transition: var(--transition-fill);
+}
+
+.modal-input:hover,
+.modal-input:focus,
+.modal-user-coment:hover,
+.modal-user-coment:focus {
+  outline: none;
+  border: 1px solid var(--accent-color);
+  border-radius: 4px;
+}
+
+.modal-input:hover ~ .input-icon-wrap,
+.modal-input:focus ~ .input-icon-wrap {
+  fill: var(--accent-color);
 }
 
 .modal-user-coment {
   width: 100%;
   resize: none;
-  width: 448px;
   height: 120px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   padding: 12px 16px;
+  margin-top: 4px;
+  transition: var(--transition-border);
 }
 
 .modal-user-coment::placeholder {
-  font-size: 12px;
-  line-height: 1.67;
+  font-size: 14px;
+  line-height: 1.14;
   letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
 }
 
 .modal-form-submit {
@@ -734,20 +760,26 @@ body {
   letter-spacing: 0.03em;
   color: var(--another-main-color);
   margin-right: 12px;
-  /* outline: none; */
+  transition: var(--transition-border);
+}
+
+.footer-mailing-field:focus,
+.footer-mailing-field:hover {
+  border-color: var(--accent-color);
+  outline: none;
 }
 
 .footer-mailing-field::placeholder {
   color: rgba(255, 255, 255, 0.6);
 }
 
-.footer-mailing-field:focus:not(:placeholder-shown):valid {
+/* .footer-mailing-field:focus:not(:placeholder-shown):valid {
   border-color: var(--accent-color);
 }
 
 .footer-mailing-field:focus:not(:placeholder-shown):invalid {
   border-color: red;
-}
+} */
 
 .footer-btn-text {
   display: inline-block;
@@ -762,6 +794,8 @@ body {
 .footer-mailing-btn {
   height: 50px;
   display: flex;
+  align-items: center;
+  text-align: center;
   padding: 10px 28px;
   background-color: var(--accent-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
@@ -770,18 +804,16 @@ body {
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
-  align-items: center;
-  text-align: center;
   letter-spacing: 0.06em;
   color: var(--another-main-color);
   fill: var(--another-main-color);
   cursor: pointer;
+  transition: var(--transition-background-color);
 }
 
-.mailing-btn:hover,
-.mailing-btn:focus {
+.footer-mailing-btn:hover,
+.footer-mailing-btn:focus {
   background-color: #188ce8;
-  /* outline: none; */
 }
 
 /*=================Web-Studio portfolio==============*/
