--- a/css/styles.css
+++ b/css/styles.css
@@ -327,7 +327,7 @@ body {
   flex-direction: column;
 }
 
-.modal-form-label {
+.modal-input-label {
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.01em;
@@ -350,6 +350,14 @@ body {
   padding-left: 42px;
   padding-right: 12px;
   transition: var(--transition-border);
+}
+
+.modal-textarea-label {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  color: var(--small-text-color);
+  margin-bottom: 20px;
 }
 
 .input-icon-wrap {
@@ -398,10 +406,72 @@ body {
   color: rgba(117, 117, 117, 0.5);
 }
 
-.modal-form-submit {
-  align-self: center;
+.modal-checkbox-lable {
+  position: relative;
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: var(--small-text-color);
 }
 
+.modal-check-wrap {
+  position: relative;
+}
+
+.modal-checkbox {
+  position: absolute;
+  bottom: 0;
+  left: 8px;
+  clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
+  clip: rect(1px, 1px, 1px, 1px);
+  padding: 0 !important;
+  border: 0 !important;
+  height: 1px !important;
+  width: 1px !important;
+  overflow: hidden;
+}
+
+.policy-link {
+  color: var(--accent-color);
+}
+
+.modal-checkbox:checked + .modal-checkbox-lable::before {
+  background-image: url("../img/icon-agree-check.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 16px;
+  height: 15px;
+}
+
+/* .modal-checkbox:focus + .modal-checkbox-lable::before {
+  background-image: url("../img/icon-agree-check.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 16px;
+  height: 15px;
+} */
+
+.modal-checkbox + .modal-checkbox-lable::before {
+  background-image: url("../img/icon-agree-uncheck.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 16px;
+  height: 15px;
+}
+
+.modal-checkbox-lable::before {
+  content: "";
+  display: block;
+  cursor: pointer;
+  margin-right: 7px;
+}
+
+.modal-form-submit {
+  align-self: center;
+  margin-top: 30px;
+}
 /*=====================Features===================*/
 .features-list {
   display: flex;
@@ -763,23 +833,25 @@ body {
   transition: var(--transition-border);
 }
 
-.footer-mailing-field:focus,
+/* .footer-mailing-field:focus,
 .footer-mailing-field:hover {
   border-color: var(--accent-color);
   outline: none;
-}
+} */
 
 .footer-mailing-field::placeholder {
   color: rgba(255, 255, 255, 0.6);
 }
 
-/* .footer-mailing-field:focus:not(:placeholder-shown):valid {
+.footer-mailing-field:focus:not(:placeholder-shown):valid {
   border-color: var(--accent-color);
+  outline: none;
 }
 
 .footer-mailing-field:focus:not(:placeholder-shown):invalid {
   border-color: red;
-} */
+  outline: none;
+}
 
 .footer-btn-text {
   display: inline-block;
